[gd_scene load_steps=4 format=3 uid="uid://dpvy1lhvhgv7g"]

[ext_resource type="Script" path="res://scripts/ui/CharacterSelectUI.gd" id="1_main"]
[ext_resource type="Texture2D" path="res://assets/ui/wireframe/App Background.png" id="2_bg"]
[ext_resource type="Texture2D" path="res://assets/ui/wireframe/shadedLight00.png" id="3_slot_bg"]

[node name="CharacterSelectUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_main")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_bg")
mouse_filter = 2

[node name="MainPanel" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = -100.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TitleLabel" type="Label" parent="MainPanel/VBoxContainer"]
layout_mode = 2
text = "SELECT CHARACTER"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharacterGrid" type="VBoxContainer" parent="MainPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="NewCharacterButton" type="Button" parent="MainPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "NEW CHARACTER"

[node name="BackButton" type="Button" parent="MainPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "BACK TO MENU"